@@ -1,3 +1,7 @@
+2009-07-20  Marc Khouzam  <marc.khouzam@ericsson.com>
+
+	* utils.c (defaulted_query): Update comment and remove dead code.
+
 2009-07-20  Doug Evans  <dje@google.com>
 
 	Add support for "comdat types" from DWARF4.
